deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-k8s-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  # Omit the "host" field to accept any traffic on localhost:8080
  - http:
      paths:
      - path: /k8s-springweb
        pathType: Prefix
        backend:
          service:
            name: springweb-service
            port:
              name: http # uses the port name specified in the nextweb service.yaml as a best practice
      - path: /k8s-nextweb
        pathType: Prefix
        backend:
          service:
            name: nextweb-service
            port:
              name: http # uses the port name specified in the nextweb service.yaml as a best practice
      - path: /helm-podinfo # overridden in prefix property of helm-deployments/podinfo/values.yaml for the podinfo Helm chart
        pathType: Prefix
        backend:
          service:
            name: podinfo-1785986102 # name of the podinfo service generated by helm --generate-name
            port:
              name: http # doesn't work with the port number as the podinfo deployment.yaml provides a name for a custom port apparently
